kubedeploy/apigateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: apigateway-service
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 5050
    targetPort: 5050
    nodePort: 30002
  selector:
    app: apigateway
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigateway
      version: v1
  template:
    metadata:
      labels:
        app: apigateway
        version: v1
    spec:
      containers:
      - name: apigateway
        image: nayeemullahbaig/apigateway-image
        imagePullPolicy: Always
        ports:
        - containerPort: 5050
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigateway
      version: v2
  template:
    metadata:
      labels:
        app: apigateway
        version: v2
    spec:
      containers:
      - name: apigateway
        image: nayeemullahbaig/apigateway-image:0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 5050
