kubedeploy/data-modelling.yaml
apiVersion: v1
kind: Service
metadata:
  name: mdb
spec:
  ports:
  - protocol: TCP
    port: 5435
    targetPort: 5432
  selector:
    app: mdb

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mdb-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mdb
  template:
    metadata:
      labels:
        app: mdb
    spec:
      containers:
      - name: mdb
        image: postgres:12
        ports:
        - containerPort: 5432
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-model-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-model
  template:
    metadata:
      labels:
        app: data-model
    spec:
      containers:
      - name: model-image
        image: nayeemullahbaig/model-image
