kubedeploy/data-retrieveal.yaml
apiVersion: v1
kind: Service
metadata:
  name: rdb
spec:
  ports:
  - protocol: TCP
    port: 5433
    targetPort: 5432
  selector:
    app: rdb

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rdb-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rdb
  template:
    metadata:
      labels:
        app: rdb
    spec:
      containers:
      - name: rdb
        image: postgres:12
        ports:
        - containerPort: 5432
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-retrieval-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-retrieval
  template:
    metadata:
      labels:
        app: data-retrieval
    spec:
      containers:
      - name: retrieval-image
        image: nayeemullahbaig/retrieval-image
