kubedeploy/session-management.yaml
apiVersion: v1
kind: Service
metadata:
  name: smdb-service
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 5436
    targetPort: 5432
  selector:
    app: smdb

---
apiVersion: v1
kind: Service
metadata:
  name: session-service
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 5010
    targetPort: 5010
    nodePort: 30030
  selector:
    app: session-man

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: smdb-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smdb
  template:
    metadata:
      labels:
        app: smdb
        version: v1
    spec:
      containers:
      - name: smdb
        image: postgres:12
        ports:
        - containerPort: 5432
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: session-man-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: session-man
  template:
    metadata:
      labels:
        app: session-man
        version: v1
    spec:
      containers:
      - name: session-image
        image: nayeemullahbaig/session-image
        imagePullPolicy: Always
        ports:
        - containerPort: 5010
