kubedeploy/usermanagement.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
 type: NodePort
 ports:
  - protocol: TCP
    targetPort: 5000
    port: 5000
 selector:
  app: usermanagement

---

apiVersion: v1
kind: Service
metadata:
  name: udb
spec:
 type: NodePort
 ports:
  - protocol: TCP
    targetPort: 27017
    port: 27017
 selector:
  app: udb

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: userman-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: udb
  template:
    metadata:
      labels:
        app: udb
    spec:
      containers:
      - name: udb
        image: mongo:4.0.4
        ports:
        - containerPort: 27017
---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: usermanagement-deployment
spec:
  selector:
    matchLabels:
      app: usermanagement
  replicas: 1
  template:
    metadata:
      labels:
        app: usermanagement
    spec:
      containers:
      - name: user-image
        imagePullPolicy: Always
        image: nayeemullahbaig/user-image
        ports:
        - containerPort: 5000
