kubedeploy/apigateway-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apigateway
spec:
  hosts:
  - "*"
  gateways:
  - noodle-gateway
  http:
  - route:
    - destination:
        host: apigateway
