kubedeploy/messaging-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kafka-service
spec:
  hosts:
  - "*"
  gateways:
  - noodle-gateway
  http:
  - route:
    - destination:
        host: kafka-service
        
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: zookeeper
spec:
  hosts:
  - "*"
  gateways:
  - noodle-gateway
  http:
  - route:
    - destination:
        host: zookeeper
